fix: Remove extra padding from transaction payload

--- a/client/src/app/components/stardust/TransactionPayload.scss
+++ b/client/src/app/components/stardust/TransactionPayload.scss
@@ -58,6 +58,8 @@
     }
 
     .card--content {
+      padding-bottom: 0;
+
       .card--value {
         margin-left: auto;
         color: var(--type-color);
